--- a/src/app/partymanager/party/party.component.html
+++ b/src/app/partymanager/party/party.component.html
@@ -1,16 +1,16 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-success">Add member</button>
+    <app-party-cockpit></app-party-cockpit>
   </div>
 </div>
 <hr>
 <div class="row">
   <div class="col-xs-12">
     <div>
-      <app-character *ngFor="let member of party" [member]="member"
-                     style="margin: 1px"
+      <app-partymember *ngFor="let member of party" [member]="member"
+
                      (memberSelected)="onSelected(member)">
-      </app-character>
+      </app-partymember>
     </div>
   </div>
 </div>
