--- a/src/app/partymanager/partymanager.component.html
+++ b/src/app/partymanager/partymanager.component.html
@@ -3,10 +3,10 @@
     <h2>Party Manager</h2>
   </div>
   <div class="row">
-    <app-party [party]="party" (memberSelected)="onSelected($event)"></app-party>
+    <app-party [party]="party" [characters]="characters" (memberSelected)="onSelected($event)"></app-party>
   </div>
   <div class="row">
-    <app-character-detail *ngIf="selectedCharacter; else infoText" [member]="selectedCharacter"></app-character-detail>
+    <app-partymember-detail *ngIf="selectedCharacter; else infoText" [member]="selectedCharacter"></app-partymember-detail>
     <ng-template #infoText>
       <h3>Please select a character!</h3>
     </ng-template>
