--- a/src/app/partymanager/party/party.component.html
+++ b/src/app/partymanager/party/party.component.html
@@ -1,10 +1,9 @@
 <div class="row">
   <div class="col-xs-12">
-    <app-party-cockpit></app-party-cockpit>
-
+    <h3>Add a party member: </h3>
     <nz-select nzShowSearch
                nzPlaceHolder="Select a character"
-               style="min-width: 200px"
+               class="pseudo-fullwidth"
                [(ngModel)]="selectValue"
                (ngModelChange)="onCharacterSelected($event)"
     >
@@ -13,28 +12,36 @@
                  [nzLabel]="entry.value.name"
                  [nzValue]="entry.value"
       >
-        <img [src]="entry.value.icon" alt="Icon" style="max-height: 20px;">
-        {{ entry.value.name }}
-        <fa-icon *ngIf="entry.value.isNew" [icon]="fasBell" style="color: gold;"></fa-icon>
+        <div>
+          <div class="pull-left">
+            <img [src]="entry.value.icon" alt="Icon" style="max-height: 20px;">
+            {{ entry.value.name }}
+            <fa-icon *ngIf="entry.value.isNew" [icon]="fasBell" style="color: gold;"></fa-icon>
+          </div>
+          <div class="pull-right">
+            <img [src]="'https://rerollcdn.com/GENSHIN/Elements/Element_' + entry.value.element + '.png'" alt="Element" style="max-height: 20px;">
+            <img [src]="'https://rerollcdn.com/GENSHIN/Weapon/NEW/' + entry.value.weaponType + '.png'" alt="Weapon" style="max-height: 20px;">
+          </div>
+        </div>
+
       </nz-option>
     </nz-select>
-    <div>
-      <div class="pull-left">Selected Value:</div>
-      <div *ngIf="selectValue">
-        <img [src]="selectValue.icon" alt="Icon" style="max-height: 20px;"> {{selectValue.name}}
-      </div>
-    </div>
   </div>
 </div>
-<hr>
+<nz-divider></nz-divider>
 <div class="row">
   <div class="col-xs-12">
-    <div>
-      <app-partymember *ngFor="let member of party" [member]="member"
-
-                     (memberSelected)="onSelected(member)">
+    <div *ngIf="party.length != 0; else emptyParty">
+      <app-partymember *ngFor="let member of party"
+                       [member]="member"
+                       (memberSelected)="onSelected(member)"
+                       (memberRemoved)="onRemoved(member)"
+      >
       </app-partymember>
     </div>
+    <ng-template #emptyParty>
+      <h3>Your party is empty!</h3>
+    </ng-template>
   </div>
 </div>
-
+<nz-divider></nz-divider>
