Add some display to summary component

--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -1,1 +1,14 @@
-<h2>Summary</h2>
+<div class="row">
+  <h2>Summary</h2>
+</div>
+<div class="row">
+  <div class="list-group-item clearfix" *ngFor="let member of partyService.party">
+    {{member.character.name}}
+    <div *ngFor="let mset of member.character.ascension">
+      {{mset.rank}}:
+      <div *ngFor="let entry of mset.materials">
+        {{entry.material_id}} : {{entry.amount}}
+      </div>
+    </div>
+  </div>
+</div>
