--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -2,14 +2,9 @@
   <h2>Summary</h2>
 </div>
 <div class="row">
+  <nz-input-number [(ngModel)]="ascensionStage" [nzMin]="0" [nzMax]="6" [nzStep]="1" (ngModelChange)="onAscensionStageChange()">
+  </nz-input-number>
   <div *ngFor="let item of requiredItemsForNextAscension() | keyvalue">
-    <div *ngIf="item.value.material else idOnly">
-      {{item.value.amount}}: {{item.value.material.name}}
-    </div>
-    <ng-template #idOnly>
-      <div style="color: red">
-        {{item.value.amount}}: {{item.value.material.name}}
-      </div>
-    </ng-template>
+    <app-item [entry]="item.value"></app-item>
   </div>
 </div>
