--- a/src/app/partymanager/party/partymember/partymember.component.html
+++ b/src/app/partymanager/party/partymember/partymember.component.html
@@ -3,7 +3,7 @@
                nzSize="small"
                nz-tooltip="Include in Schedule/Summary"></nz-switch>
     <nz-avatar [nzSrc]="member.character.icon" nzAlt="icon" nzGap="1" nzSize="large"></nz-avatar>
-    {{member.character.name}}
+    <span style="flex-grow: 4">{{member.character.name}}</span>
     <nz-button-group style="order: 5">
       <button nz-button
               nzType="primary"
