--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body {
+  height: 100%;
+  font-family: "Roboto",sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  /*color: #fff;*/
+  /*background: #363938;*/
+}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
