--- a/src/app/partymanager/member-detail/member-detail.component.html
+++ b/src/app/partymanager/member-detail/member-detail.component.html
@@ -2,23 +2,107 @@
   <app-member-header [member]="member"></app-member-header>
   <app-member-nav></app-member-nav>
   <div class="character-overview">
-    <h2>{{ member.character.name }}</h2>
+    <h2>{{ localization.get(member.character_id).name }}</h2>
     <p class="overview-description">
-      {{ member.character.description }}
-    </p>
+    {{ localization.get(member.character_id).description }}
+  </p>
   </div>
-  <div class="character-stats">
-    <h2>Stats</h2>
-    <div style="display: grid;">
-      <h4 style="">Ascension Rank: </h4>
+  <nz-divider nzText="Setup" nzOrientation="left"></nz-divider>
+  <!-- Ascension input -->
+  <div nz-row [nzGutter]="{ xs: 8, sm: 16, md: 24, lg: 32 }">
+    <div nz-col [nzSpan]="6">
+      <label for="ascension_input" i18n="Ascension">Ascension: </label>
+    </div>
+    <div nz-col [nzSpan]="6">
       <nz-input-number [(ngModel)]="member.ascension"
-                       [nzMin]="0"
-                       [nzMax]="6"
-                       [nzStep]="1">
+                                              [nzMin]="0"
+                                              [nzMax]="6"
+                                              [nzStep]="1"
+                                              id="ascension_input">
       </nz-input-number>
-      <h4>Level: </h4>
+    </div>
+  </div>
+  <!-- Level input -->
+  <div nz-row [nzGutter]="{ xs: 8, sm: 16, md: 24, lg: 32 }">
+    <div nz-col [nzSpan]="6">
+      <label for="level_input" i18n="Level">Level: </label>
+    </div>
+    <div nz-col [nzSpan]="6">
       <nz-input-number [(ngModel)]="member.level"
                        [nzMin]="1"
+                       [nzMax]="90"
+                       [nzStep]="1" id="level_input">
+      </nz-input-number>
+    </div>
+  </div>
+  <!-- Weapon input -->
+  <div nz-row [nzGutter]="{ xs: 8, sm: 16, md: 24, lg: 32 }">
+    <div nz-col [nzSpan]="6">
+      <label i18n="Weapon">Weapon: </label>
+    </div>
+    <div nz-col [nzSpan]="6">
+      <nz-select nzShowSearch
+                 nzAutoClearSearchValue
+                 nzAllowClear
+                 nzPlaceHolder="Select a weapon"
+                 class="pseudo-fullwidth"
+                 style="min-width: 250px;"
+                 [(ngModel)]="member.weapon_id"
+      >
+        <nz-option nzCustomContent
+                   *ngFor="let entry of weapons.sortedMap.get(characters.characterMap.get(member.character_id).weaponType) | keyvalue"
+                   [nzLabel]="entry.value.id"
+                   [nzValue]="entry.value"
+        >
+          <div>
+            <div class="pull-left">
+              <img [src]="entry.value.icon" [alt]="entry.key" style="max-height: 20px;">
+              {{ entry.value.id }}
+            </div>
+          </div>
+        </nz-option>
+      </nz-select>
+    </div>
+  </div>
+  <!-- Weapon ascension input -->
+  <div *ngIf="member.weapon_id"
+       nz-row
+       [nzGutter]="{ xs: 8, sm: 16, md: 24, lg: 32 }">
+    <div nz-col [nzSpan]="6">
+      <label for="weapon_ascension_input" i18n="Weapon ascension">Weapon ascension: </label>
+    </div>
+    <div nz-col [nzSpan]="6">
+      <nz-input-number [(ngModel)]="member.weaponAsc"
+                       [nzMin]="0"
+                       [nzMax]="6"
+                       [nzStep]="1"
+                       id="weapon_ascension_input">
+      </nz-input-number>
+    </div>
+  </div>
+  <!-- Weapon level input -->
+  <div *ngIf="member.weapon_id"
+       nz-row
+       [nzGutter]="{ xs: 8, sm: 16, md: 24, lg: 32 }">
+    <div nz-col [nzSpan]="6">
+      <label for="weapon_level_input" i18n="Weapon level">Weapon level: </label>
+    </div>
+    <div nz-col [nzSpan]="6">
+      <nz-input-number [(ngModel)]="member.weaponLvl"
+                       [nzMin]="1"
+                       [nzMax]="90"
+                       [nzStep]="1" id="weapon_level_input">
+      </nz-input-number>
+    </div>
+  </div>
+
+  <!-- Talent input -->
+  <div *ngIf="false" nz-row [nzGutter]="{ xs: 8, sm: 16, md: 24, lg: 32 }">
+    <div nz-col [nzSpan]="6">
+      <label></label>
+    </div>
+    <div nz-col [nzSpan]="6">
+      <nz-input-number [nzMin]="1"
                        [nzMax]="90"
                        [nzStep]="1">
       </nz-input-number>
