--- a/src/app/summary/item/item.component.html
+++ b/src/app/summary/item/item.component.html
@@ -1,9 +1,9 @@
 <div class="item-box">
   <div class="item-box-image-wrapper">
     <img [src]="entry.material.icon"
-         [alt]="entry.material.name"
+         [alt]="entry.material.id"
          class="item-box-image">
-    <span class="item-box-image-count">{{entry.amount}}</span>
+    <span class="item-box-image-count">{{formatAmount(entry.amount)}}</span>
   </div>
-  {{entry.material.name}}
+  {{localizationService.translationsMap.get(entry.material.id).name}}
 </div>
